# prospectio-api-mcp

./: .env.example  .gitignore  .trivyignore  Dockerfile  README.md  docker-compose.yml  pyproject.toml  sonar-project.properties
.github/workflows/: cd.yaml  ci.yaml
database/: init.sql
prospectio_api_mcp/: alembic.ini  config.py  main.py
prospectio_api_mcp/alembic/: env.py
prospectio_api_mcp/alembic/versions/: 001_initial_schema.py  002_add_profile_columns.py
prospectio_api_mcp/application/api/: leads_routes.py  profile_routes.py
prospectio_api_mcp/application/requests/: campaign.py
prospectio_api_mcp/application/use_cases/: generate_campaign.py  generate_campaign_stream.py  get_leads.py  insert_leads.py  reset_data.py  retry_campaign_stream.py
prospectio_api_mcp/domain/entities/: campaign.py  campaign_result.py  certification.py  company.py  contact.py  education.py  job.py  language.py  profile.py  sse_events.py  task.py  validation_result.py
prospectio_api_mcp/domain/ports/: campaign_repository.py  contact_validator.py  leads_repository.py  profile_respository.py  task_manager.py
prospectio_api_mcp/domain/prompts/: company_decision.md  contact_bio.md  contacts_from_answer.md  prospection_prompt.md  resume_extraction.md
prospectio_api_mcp/domain/services/: prompt_loader.py
prospectio_api_mcp/domain/services/leads/: leads_processor.py
prospectio_api_mcp/infrastructure/dto/database/: campaign.py  contact.py  message.py  profile.py
prospectio_api_mcp/infrastructure/dto/llm/: __init__.py  certification_llm.py  education_llm.py  extracted_profile_llm.py  language_llm.py  resume_extraction_result.py  work_experience_llm.py
prospectio_api_mcp/infrastructure/dto/rapidapi/: active_jobs_db.py
prospectio_api_mcp/infrastructure/services/: active_jobs_db.py  campaign_database.py  generate_message.py  jsearch.py  leads_database.py  profile_database.py  resume_extractor.py  task_manager.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/: agent.py  nodes.py  state.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/chains/: enrich_chain.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/models/: contact_bio.py  contact_info.py  web_search_models.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/tools/: duckduckgo_client.py  web_search_client.py
prospectio_api_mcp/infrastructure/services/enrich_leads_agent/validators/: __init__.py  contact_validator.py
tests/: conftest.py
tests/doubles/: __init__.py  ports.py  repositories.py
tests/fixtures/: external.py
tests/ut/: test_active_jobs_db_use_case.py  test_campaign_database.py  test_campaign_repository.py  test_compatibility_score.py  test_contact_validator.py  test_db_dto_models.py  test_decision_chain.py  test_duckduckgo_client.py  test_enrich_agent.py  test_enrich_chain.py  test_enrich_leads_agent_streaming.py  test_enrich_nodes.py  test_fake_leads_repository.py  test_generate_campaign_stream.py  test_generate_campaign_use_case.py  test_generate_message_llm.py  test_generate_message_use_case.py  test_job_streaming.py  test_jsearch_use_case.py  test_leads_database.py  test_leads_processor_extended.py  test_leads_routes.py  test_leads_routes_handlers.py  test_llm_client_factory.py  test_llm_dto_models.py  test_llm_generic_client.py  test_mcp_routes.py  test_profile_database.py  test_profile_routes.py  test_profile_routes_handlers.py  test_prompt_loader.py  test_request_models.py  test_reset_data_use_case.py  test_resume_extractor.py  test_retry_campaign_stream.py  test_sse_events.py  test_task_manager.py  test_task_manager_extended.py  test_web_search_client.py  test_web_search_models.py
tests/ut/fakes/: __init__.py  fake_leads_repository.py
