[project]
name = "prospectio_api_mcp"
version = "0.1.0"
description = "Prospectio MCP API"
authors = [{ name = "Yohan Goncalves", email = "yohan.goncalves.pro@gmail.com" }]
requires-python = ">=3.12.7"
license = { text = "Apache 2.0" }
dependencies = [
    "pydantic>=2.11.0",
    "pydantic-settings>=2.11.0",
    "httpx[http2]==0.28.1",
    "mcp>=1.23.0",
    "fastapi[standard]>=0.135.0",
    "SQLAlchemy==2.0.41",
    "asyncpg==0.30.0",
    "greenlet==3.2.3",
    "langchain==0.3.26",
    "langchain-core>=0.3.81,<1.0.0",
    "langchain-ollama==0.3.5",
    "langchain-community==0.3.27",
    "langchain-mistralai==0.2.11",
    "langchain-google-genai==2.1.9",
    "langgraph>=0.6.11",
    "langchain-openai==0.3.28",
    "email-validator==2.3.0",
    "markitdown[pdf]==0.1.4",
    "ddgs==9.5.2",
    "python-dotenv>=1.0.1",
    "urllib3>=2.6.3",
    "protobuf>=6.33.5",
    "pyasn1>=0.6.3",
    "orjson>=3.11.6",
    "aiohttp>=3.13.3",
    "starlette>=0.49.1",
    "python-multipart>=0.0.22",
    "langchain-text-splitters>=0.3.9",
    "langgraph-checkpoint>=3.0.0",
    "alembic>=1.15.0",
]

[dependency-groups]
dev = [
    "pytest==8.4.1",
    "pytest-asyncio==1.0.0",
    "python-dotenv==1.0.1",
    "pytest-cov>=7.1.0",
    "aiosqlite>=0.22.1",
    "ipython==9.4.0",
]

[tool.pytest.ini_options]
pythonpath = ["prospectio_api_mcp"]
addopts = "-v --cov --cov-report=term-missing --cov-report=xml"
testpaths = ["tests"]
asyncio_mode = "auto"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["prospectio_api_mcp"]

[tool.coverage.run]
source = ["prospectio_api_mcp"]
omit = [
    "prospectio_api_mcp/main.py",
    "prospectio_api_mcp/dependencies.py",
    "prospectio_api_mcp/alembic/*",
]

[tool.coverage.report]
omit = [
    "prospectio_api_mcp/main.py",
    "prospectio_api_mcp/dependencies.py",
    "prospectio_api_mcp/alembic/*",
]
